update vendor name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravel-contact-csv",
+    "name": "palmabit/laravel-contact-csv",
     "description": "Save contact input in csv file",
     "version": "0.0.1",
     "authors": [
