update readme, rename proj

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "palmabit/laravel-contact-csv",
     "description": "Save contact input in csv file",
-    "version": "0.0.1",
+    "version": "0.0.3",
+    "license": "MIT",
     "authors": [
         {
             "name": "Giuseppe Aremare",
