--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,13 @@
     "require": {
         "php": ">=5.4.0",
         "laravel/framework": "5.*",
-        "illuminate/config": "~5.0",
-        "sensiolabs/security-checker": "^2.0"
+        "illuminate/config": "5.*",
+        "sensiolabs/security-checker":"*"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.5",
-        "illuminate/support": "5.0.*",
-        "illuminate/filesystem": "~5.0",
+        "illuminate/support": "5.*",
+        "illuminate/filesystem": "5.*",
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1",
         "orchestra/testbench": "~3.0"
