--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
     "require": {
         "php": ">=5.4.0",
         "laravel/framework": "5.*",
-        "illuminate/config": "5.*",
-        "sensiolabs/security-checker":"*"
+        "illuminate/config": "5.*"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.5",
